--- a/mainApp/templates/sidebar.html
+++ b/mainApp/templates/sidebar.html
@@ -57,9 +57,17 @@
             </ul>
             <ul class="nav nav-treeview">
                 <li class="nav-item">
-                    <a href="{% url 'weighingstate'%}" class="nav-link">
+                    <a href="{% url 'startbatch'%}" class="nav-link">
                         <i class="far fa-circle nav-icon"></i>
-                        <p>Weighing State</p>
+                        <p>Start Batch</p>
+                    </a>
+                </li>
+            </ul>
+            <ul class="nav nav-treeview">
+                <li class="nav-item">
+                    <a href="{% url 'endbatch'%}" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>End Batch</p>
                     </a>
                 </li>
             </ul>
