--- a/mainApp/templates/end_batch.html
+++ b/mainApp/templates/end_batch.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block titlepage %}
-<h1>Start Batch</h1>
+<h1>End Batch</h1>
 {% endblock %}
 {% block sidebar %}
 {% include "sidebar.html" %}
@@ -20,7 +20,7 @@
             </li>
             {% if action == 'edit' %}
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'startbatch' %}#tab-2">New</a>
+                <a class="nav-link" href="{% url 'endbatch' %}#tab-2">New</a>
             </li>
             {% endif %}
         </ul>
@@ -70,7 +70,7 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     {% if action == 'view' %}
-                                    <form action="{% url 'startbatch' %}" method="POST" autocomplete="off">
+                                    <form action="{% url 'endbatch' %}" method="POST" autocomplete="off">
                                         {% elif action == 'edit' %}
                                         <!-- <form action="{% url 'editproduct' id %}" method="POST" autocomplete="off"> -->
                                             {% endif %}
