--- a/mainApp/templates/home.html
+++ b/mainApp/templates/home.html
@@ -57,7 +57,7 @@
     <div class="col-md-6">
         <div class="card">
             <div class="card-header">
-                <h3 class="card-title">BATCH HISTORY</h3>
+                <h3 class="card-title">NO. BATCH: {{state.batchno}} </h3>
             </div>
             <div class="card-body" style="overflow-y: scroll; height:500px;">
                 <ul class="products-list product-list-in-card pl-2 pr-2" id="batchhistorylist">
