--- a/mainApp/templates/sidebar.html
+++ b/mainApp/templates/sidebar.html
@@ -117,5 +117,34 @@
                 </li>
             </ul>
         </li>
+        <li class="nav-item">
+            <a href="#" class="nav-link">
+                <i class="nav-icon fas fa-user"></i>
+                <p>
+                    User Management
+                    <i class="right fas fa-angle-left"></i>
+                </p>
+            </a>
+            <ul class="nav nav-treeview">
+                <li class="nav-item">
+                    <a href="{% url 'changepwd'%}" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Change Password</p>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'viewreportbody'%}" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Groups</p>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'viewreportbody'%}" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Users</p>
+                    </a>
+                </li>
+            </ul>
+        </li>
     </ul>
 </nav>
