--- a/mainApp/templates/sidebar.html
+++ b/mainApp/templates/sidebar.html
@@ -139,7 +139,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url 'viewreportbody'%}" class="nav-link">
+                    <a href="{% url 'userlist'%}" class="nav-link">
                         <i class="far fa-circle nav-icon"></i>
                         <p>Users</p>
                     </a>
