--- a/mainApp/templates/sidebar.html
+++ b/mainApp/templates/sidebar.html
@@ -72,12 +72,12 @@
                         </p>
                     </a>
                     <ul class="nav nav-treeview">
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a href="{% url 'viewuploadbatch'%}" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Upload Batch</p>
                             </a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a href="{% url 'startbatch'%}" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
