--- a/secureapp/templates/registration/userlist.html
+++ b/secureapp/templates/registration/userlist.html
@@ -49,6 +49,8 @@
                                             <td>{{row.group}}</td>
                                             <td><a class="btn btn-secondary" href="{% url 'edituser' row.id %}"><i
                                                         class="fas fa-edit"></i></a>
+                                                <a class="btn btn-primary" href="{% url 'groupadd' row.id %}"><i
+                                                        class="fas fa-users"></i></a>
                                                 <a class="btn btn-danger" href="{% url 'deleteuser' row.id %}"
                                                     onclick="return confirm('Apakah anda yakin untuk menghapus data?')"><i
                                                         class="fas fa-trash"></i></a>
