--- a/mainApp/templates/sidebar.html
+++ b/mainApp/templates/sidebar.html
@@ -79,15 +79,9 @@
                             </a>
                         </li> -->
                         <li class="nav-item">
-                            <a href="{% url 'startbatch'%}" class="nav-link">
+                            <a href="{% url 'viewweighingstate'%}" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
-                                <p>Start Batch</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="{% url 'endbatch'%}" class="nav-link">
-                                <i class="far fa-circle nav-icon"></i>
-                                <p>End Batch</p>
+                                <p>Batch No</p>
                             </a>
                         </li>
                     </ul>
