--- a/mainApp/templates/weighingstate.html
+++ b/mainApp/templates/weighingstate.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block titlepage %}
-<h1>Start Batch</h1>
+<h1>Batch</h1>
 {% endblock %}
 {% block sidebar %}
 {% include "sidebar.html" %}
@@ -16,11 +16,11 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link {% if action == 'edit' %} active {% endif %}" id="button-tab-2" data-toggle="pill" href="#tab-2"
-                    role="tab" aria-controls="tab-2" aria-selected="false">{% if action == 'view' %} Set State {% else %} Edit {% endif %}</a>
+                    role="tab" aria-controls="tab-2" aria-selected="false">{% if action == 'view' %} New {% else %} Edit {% endif %}</a>
             </li>
             {% if action == 'edit' %}
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'startbatch' %}#tab-2">New</a>
+                <a class="nav-link" href="{% url 'viewweighingstate' %}#tab-2">New</a>
             </li>
             {% endif %}
         </ul>
@@ -35,8 +35,9 @@
                                 <table class="table dataTable">
                                     <thead>
                                         <tr>
-                                            <th>Name</th>
+                                            <th>Product Name</th>
                                             <th>Batch No</th>
+                                            <th>Pending Status</th>
                                             <th>Status</th>
                                             <!-- <th>Action</th> -->
                                         </tr>
@@ -46,6 +47,7 @@
                                         <tr>
                                             <td>{{row.product.name}}</td>
                                             <td>{{row.batchno}}</td>
+                                            <td>{{row.pendingstatus|yesno:'Pending, Close'}}</td>
                                             <td>{{row.status|yesno:'Aktif, Tidak Aktif'}}</td>
                                             <!-- <td>
                                                 <a class="btn btn-secondary" href="{% url 'editproduct' row.id %}"><i
@@ -70,7 +72,7 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     {% if action == 'view' %}
-                                    <form action="{% url 'startbatch' %}" method="POST" autocomplete="off">
+                                    <form action="{% url 'viewweighingstate' %}" method="POST" autocomplete="off">
                                         {% elif action == 'edit' %}
                                         <!-- <form action="{% url 'editproduct' id %}" method="POST" autocomplete="off"> -->
                                             {% endif %}
