--- a/mainApp/templates/batchno_history.html
+++ b/mainApp/templates/batchno_history.html
@@ -1,42 +1,12 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block titlepage %}
-<h1>Report Batch</h1>
+<h1>Batch History</h1>
 {% endblock %}
 {% block sidebar %}
 {% include "sidebar.html" %}
 {% endblock %}
 {% block content %}
-<div class="row">
-    <div class="col-lg-12">
-        <div class="card">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <form action="{% url 'history' %}" method="POST" autocomplete="off">
-                            <div class="row">
-                                {% csrf_token %}
-                                <div class="col-lg-6">
-                                    {% for field in form|slice:":2" %}
-                                    {{field|as_crispy_field}}
-                                    {% endfor %}
-                                    <hr>
-                                </div>
-                                <div class="col-lg-6">
-                                    {% for field in form|slice:"2:" %}
-                                    {{field|as_crispy_field}}
-                                    {% endfor %}
-                                    <hr>
-                                </div>
-                            </div>
-                            <input class="btn btn-success" type="submit" value="Cari">
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 <div class="card">
     <div class="card-body">
         <div class="row">
