--- a/mainApp/templates/home.html
+++ b/mainApp/templates/home.html
@@ -27,6 +27,31 @@
         </div>
     </div>
 </div>
+<div class="modal fade" id="weightAdjustmentModal" data-backdrop="static" tabindex="-1" role="dialog"
+    aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="weightAdjustment">Weight Adjustment</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <input class="form-control" type="hidden" id="registerid">
+                <label for="adjustment">Initial Weight</label>
+                <input class="form-control" type="text" id="currentweight" readonly>
+                <label for="adjustment">Weight Change</label>
+                <input class="form-control" type="text" id="differenceweight" readonly>
+                <label for="adjustment">Desired Weight</label>
+                <input class="form-control" type="text" id="finalweight">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary float-left" id="btnlastbox" data-dismiss="modal">Submit</button>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="row">
     <div class="col-md-6">
         <div class="row">
@@ -89,6 +114,9 @@
 {% endblock %}
 {% block additionaljs %}
 <script>
+    var initialbatchno = '{{state.batchno}}'
+    var initialproductcode = '{{state.product.code}}'
+
     var url = "{% url 'registerqr' %}"
     $("#submitBoxno").click(function () {
         boxSubmit()
@@ -134,6 +162,12 @@
     function updateBoxList() {
         var batchno = $("#batchno").val()
         var code = $("#code").val()
+        if ($("#batchno").val() == "") {
+            batchno = initialbatchno
+        }
+        if ($("#code").val() == "") {
+            code = initialproductcode
+        }
         var url = "{% url 'registerqr' %}"+"/register?batchno="+ batchno +"&code="+ code
         // var url = "/weighing
         if (code && batchno) {
@@ -152,14 +186,19 @@
                             status = 'REJECT'
                         } else if (record.status==2){
                             status = 'LAST BOX'
-                        } else {
+                        } else if (record.status == 1) {
                             status = 'OK'
+                        } else {
+                            status = 'WAITING FOR WEIGHING'
                         } 
                         html += '\
                         <li class="item">\
-                            <div class="product-img">\
+                            <div class="product-img" style="margin-right:7px">\
                                 <button class="btn btn-danger deleteBox" data-id="'+ record.id +'">\
                                     <i class="fas fa-times"></i>\
+                                </button>\
+                                <button class="btn btn-secondary btnweightAdjustment" data-weight="'+ weight +'">\
+                                    <i class="fa fa-edit"></i>\
                                 </button>\
                             </div>\
                             <div class="product-info">\
@@ -171,11 +210,11 @@
                             </div>\
                         </li>'
                     }
-                    if(data.insertsuccess == "False"){
-                        // $("#rejectedbox").text(data.)
-                        $("#rejectboxid").val(data.id)
-                        $("#rejectModal").modal('show')
-                    }
+                    // if(data.insertsuccess == "False"){
+                    //     // $("#rejectedbox").text(data.)
+                    //     $("#rejectboxid").val(data.id)
+                    //     $("#rejectModal").modal('show')
+                    // }
                     $('#batchhistorylist').html(html)
                 }
             })
@@ -184,7 +223,7 @@
 
     const interval = setInterval(function () {
         updateBoxList()
-    }, 5000);
+    }, 2500);
 
     function updateWeight() {
         var url = "{% url 'scale' %}"
@@ -205,7 +244,7 @@
 
     const interval2 = setInterval(function () {
         updateWeight()
-    }, 1000);
+    }, 5000);
 
     $("#batchhistorylist").on("click", ".deleteBox",function () {
         var registerid = $(this).data('id');
@@ -256,6 +295,18 @@
             },
         })
     })
+    
+    $("#batchhistorylist").on("click", ".btnweightAdjustment", function () {
+        $("#differenceweight").val("")
+        $("#finalweight").val("")
+        $("#weightAdjustmentModal").modal('show')
+        $("#currentweight").val($(this).data('weight'))
+    })
+
+    $("#finalweight").keyup(function () {
+        $("#differenceweight").val($("#finalweight").val() - $("#currentweight").val())
+    });
+
     $(document).on('keypress', function (e) {
         if (e.which == 13 && e.target.id == 'qr') {
             boxSubmit()
