--- a/mainApp/templates/sidebar.html
+++ b/mainApp/templates/sidebar.html
@@ -75,6 +75,12 @@
                         <p>Batch No</p>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a href="{% url 'viewsimulator'%}" class="nav-link btn-danger">
+                        <i class="fas fa-exclamation nav-icon"></i>
+                        <p>Scale Simulator</p>
+                    </a>
+                </li>
             </ul>
         </li>
         <li class="nav-item">
