--- a/mainApp/templates/base.html
+++ b/mainApp/templates/base.html
@@ -38,7 +38,7 @@
                     <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
-                    <p class="nav-link">Infion Weighing System - {% now "d M Y" %}</p>
+                    <p class="nav-link">Hello {{request.user}}! - Infion Weighing System - {% now "d M Y" %}</p>
                 </li>
             </ul>
 
