--- a/mainApp/templates/weighing_simulator.html
+++ b/mainApp/templates/weighing_simulator.html
@@ -32,7 +32,7 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-lg-12">
-                                <table class="table dataTable">
+                                <table class="table">
                                     <thead>
                                         <tr>
                                             <th>ID</th>
